crates/cli/tests/snapshots/lib__run_test@arithmetic.nemo.snap
---
source: crates/backend/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - /Users/christoph/code/nemo-lang/crates/backend/tests/passing/arithmetic.nemo
    - "--output"
    - tests/build/passing/arithmetic.wasm
input_file: crates/backend/tests/passing/arithmetic.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
