crates/cli/tests/snapshots/lib__run_test@arrays.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/passing/arrays.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/arrays.nemo
---
success: true
exit_code: 0
----- stdout -----
42
1
0

----- stderr -----
