crates/cli/tests/snapshots/lib__run_test@block.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\block.nemo"
    - "--output"
    - tests/build/passing/block.wasm
input_file: crates/cli/tests/run/block.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
