crates/cli/tests/snapshots/lib__run_test@closures.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/closures.nemo
    - "--output"
    - tests/build/closures.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/closures.nemo
---
success: false
exit_code: 101
----- stdout -----

----- stderr -----
thread 'main' panicked at crates/frontend/src/lib.rs:105:13:
No IR generated, despite no errors
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
