crates/cli/tests/snapshots/lib__run_test@decl.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/passing/decl.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/decl.nemo
---
success: true
exit_code: 0
----- stdout -----
10
1
1
1
1
2
0

----- stderr -----
