crates/cli/tests/snapshots/lib__run_test@decl.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\decl.nemo"
    - "--output"
    - tests/build/passing/decl.wasm
input_file: crates/cli/tests/run/decl.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
